fixing footer bar covering body html - style mod

--- a/style/style.css
+++ b/style/style.css
@@ -20,7 +20,7 @@ body{
     background-image: url(background.jpg);
     background-size: cover;
     //background-color: #FFFFFF;
-    padding-bottom: 32px;
+    padding-bottom: 34px;
 }
 
 
